    2  Release 0.9
      2.1  New features
      2.2  Bug fixes
      2.3  Backwards incompatible changes
      2.4  Changes merged in from IPython1
        2.4.1  New features
        2.4.2  Bug fixes
        2.4.3  Backwards incompatible changes
    3  Release 0.8.4
    4  Release 0.8.3
    5  Release 0.8.2
    6  Older releases
..

Release dev
===========

New features
------------

* The wonderful TextMate editor can now be used with %edit on OS X.  Thanks
  to Matt Foster for this patch.

* Fully refactored :command:`ipcluster` command line program for starting
  IPython clusters.  This new version is a complete rewrite and 1) is fully
  cross platform (we now use Twisted's process management), 2) has much
  improved performance, 3) uses subcommands for different types of clusters, 
  4) uses argparse for parsing command line options, 5) has better support
  for starting clusters using :command:`mpirun`, 6) has experimental support
  for starting engines using PBS.  However, this new version of ipcluster
  should be considered a technology preview.  We plan on changing the API
  in significant ways before it is final.

* The :mod:`argparse` module has been added to :mod:`IPython.external`.

* Fully description of the security model added to the docs.

* cd completer: show bookmarks if no other completions are available.

* sh profile: easy way to give 'title' to prompt: assign to variable
  '_prompt_title'. It looks like this::
      
        [~]|1> _prompt_title = 'sudo!'
        sudo![~]|2>

* %edit: If you do '%edit pasted_block', pasted_block
  variable gets updated with new data (so repeated 
  editing makes sense)

Bug fixes
---------

* The ipengine and ipcontroller scripts now handle missing furl files
  more gracefully by giving better error messages.

* %rehashx: Aliases no longer contain dots. python3.0 binary
  will create alias python30. Fixes:
  #259716 "commands with dots in them don't work"

* %cpaste: %cpaste -r repeats the last pasted block.